--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -11,7 +11,6 @@
         android:id="@+id/toolbar_library3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
         android:background="@color/pn_yellow_light_ori"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
@@ -24,7 +23,6 @@
         android:id="@+id/FavoritenRecyclerView"
         android:layout_width="409dp"
         android:layout_height="673dp"
-        android:layout_marginEnd="8dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,10 +35,10 @@
         android:id="@+id/favorite_title_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/felipa"
+        android:fontFamily="@font/inter_medium"
         android:text="@string/Best_of_Musik"
         android:textColor="@color/pn_aubergine_ori"
-        android:textSize="24sp"
+        android:textSize="27sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/toolbar_library3"
         app:layout_constraintEnd_toEndOf="parent"
