--- a/app/src/main/res/layout/fragment_time_picker.xml
+++ b/app/src/main/res/layout/fragment_time_picker.xml
@@ -28,9 +28,14 @@
                 android:id="@+id/timepicker_title_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="60dp"
+                android:layout_marginTop="32dp"
+                android:fontFamily="@font/inter_medium"
                 android:text="@string/select_nap_time"
+                android:textColor="@color/pn_aubergine_ori"
+                android:textSize="24sp"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.495"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -40,6 +45,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="@string/maax_time"
+                android:visibility="invisible"
                 app:layout_constraintEnd_toEndOf="@+id/timepicker_title_tv"
                 app:layout_constraintHorizontal_bias="0.538"
                 app:layout_constraintStart_toStartOf="@+id/timepicker_title_tv"
@@ -49,10 +55,11 @@
                 android:id="@+id/numPicker"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30sp"
+                android:layout_marginTop="16dp"
                 app:layout_constraintEnd_toEndOf="@+id/timepicker_title_tv"
+                app:layout_constraintHorizontal_bias="0.52"
                 app:layout_constraintStart_toStartOf="@+id/timepicker_title_tv"
-                app:layout_constraintTop_toBottomOf="@+id/timepicker_title_tv" />
+                app:layout_constraintTop_toBottomOf="@+id/timepicker_title2_tv" />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/timepicker_end_fab"
@@ -65,6 +72,19 @@
                 android:src="@drawable/ic_done"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
+
+            <TextView
+                android:id="@+id/timepicker_title2_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:fontFamily="@font/inter_medium"
+                android:text="@string/maxMinuten"
+                android:textColor="@color/pn_aubergine_ori"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="@+id/timepicker_title_tv"
+                app:layout_constraintStart_toStartOf="@+id/timepicker_title_tv"
+                app:layout_constraintTop_toBottomOf="@+id/timepicker_title_tv" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
