length of progressbar

--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -59,6 +59,7 @@
         android:layout_height="350dp"
         android:indeterminate="false"
         android:textAlignment="center"
+        android:max="60"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
